--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="euromil.js"></script>
   </head>
-  <body>
-    <h1>Oy mate</h1>
-    <p>HI</p>
-    <p>HI</p>
-    <p>HI</p>
+  <body onload="getEuromilhoes()">
+    <h1>CODE:</h1>
+    <textarea name="text" id="textarea1" cols="30" rows="10"> </textarea>
   </body>
 </html>
